--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img src="tarsem.PNG" alt="Profile-pic" width="200" height="200">
+        <img src="tarsem.png" alt="Profile-pic" width="200" height="200">
         <h2 class="name">Hello.I'm Tarsem</h2>
         <p class="intro"> I've done my B.COM and M.COM from kurukshetra University. And 10 and 12th from Haryana board of school education.I'm very passionating about my work.I have proficiency in Account.Now I'm seeking challenging position in the Organization & industry where I can learn, contribute and utilize my potentials latterly. </p>
       </div>
@@ -40,12 +40,12 @@ Basic knowledge of SQL.
  </p>
 </div>
         <div class="skill-row">
-          <img class="coding-img" src="skill2.JPG" alt="skill-pic">
+          <img class="coding-img" src="skill2.jpg" alt="skill-pic">
           <h3>Business Analyst</h3>
           <p>In 2021, if you want to build a company you must need Business Analyst.Let me take care of that for you!</p>
         </div>
         <div class="skill-row">
-          <img class="web-img" src="skill.JPG" alt="skill-pic">
+          <img class="web-img" src="skill.jpg" alt="skill-pic">
           <h3>Soft-skills</h3>
           <p>Good Communication Skill<br>  
 	Honest <br>
@@ -53,7 +53,7 @@ Basic knowledge of SQL.
 </p>
         </div>
         <div class="skill-row">
-          <img class="coding-img" src="skill3.JPG" alt="skill-pic">
+          <img class="coding-img" src="skill3.jpg" alt="skill-pic">
           <h3>Strengths And Hobbies</h3>
           <p>Good Communication Skill<br>  
 	Honest <br>Reading Newspapers<br>
