--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="profile">
         <img src="tarsem.png" alt="Profile-pic" width="200" height="200">
         <h2 class="name">Hello.I'm Tarsem</h2>
-        <p class="intro"> I've done my B.COM and M.COM from kurukshetra University. And 10 and 12th from Haryana board of school education.I'm very passionating about my work.I have proficiency in Account.Now I'm seeking challenging position in the Organization & industry where I can learn, contribute and utilize my potentials latterly. </p>
+        <p class="intro"> I've done my B.COM and M.COM from kurukshetra University. And 10 and 12th from Haryana board of school education.I'm very passionate about my work.I have proficiency in Account.Now I'm seeking challenging position in the Organization & industry where I can learn, contribute and utilize my potentials latterly. </p>
       </div>
       <hr>
       <div class="skills">
